# codex-agentic-os

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEVELOPMENT.md  MEMORY.md  README.md  VISION.md  pyproject.toml
.code-index/: dependencies.jsonl  manifest.json  schema.json  symbols.jsonl
.decisions/: 0001-provider-neutral-core.md  0002-chat-transport-boundary.md  0003-conservative-static-call-indexing.md  0004-openai-compatible-endpoint-policy.md  0005-atomic-run-transition-compare-and-swap.md  0006-atomic-step-transition-compare-and-swap.md  0007-cross-version-argparse-trailing-command.md  0008-http-api-redacts-captured-output-cli-does-not.md  0009-execution-policy-rules-are-a-finite-closed-criterion-set.md
.plan/: 0001-foundation.md  0002-deterministic-repository-index.md  0003-static-call-reference-index.md  0004-durable-run-lifecycle.md  0005-coordinated-run-cancellation.md  0006-run-cancellation-cli.md  0007-next-step-dispatch.md  0008-durable-step-command.md  0009-execute-next-command-step.md  0010-running-step-recovery.md  0011-running-step-recovery-cli.md  0012-atomic-run-cancellation.md  0013-run-list-cli.md  0014-run-create-cli.md  0015-atomic-next-step-dispatch.md  0016-atomic-step-result-completion.md  0017-atomic-running-step-recovery.md  0018-atomic-run-creation.md  0019-atomic-step-append.md  0020-run-add-step-cli.md  0021-atomic-run-claim.md  0022-queued-step-cancellation.md  0023-run-execute-next-cli.md  0024-run-list-status-filter.md  0025-run-list-agent-filter.md  0026-run-claim-cli.md  0027-run-inspect-step-cli.md  0029-atomic-claim-next.md  (+98 more)
(+55 files in other folders)
